--- a/gamma/index.html
+++ b/gamma/index.html
@@ -137,9 +137,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading55">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse55" aria-expanded="false" aria-controls="collapse55">
-								<h5>TBA
+								<h5>Supersymplectic Marsden-Weinstein reductions
 								<br>
-								TBA &#8213; 18/01/2025, 15:00</h5>
+								Adam Maskalaniec (University of Warsaw) &#8213; 18/01/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse55" class="accordion-collapse collapse" aria-labelledby="heading55" data-bs-parent="#accordion-fall24">
@@ -155,9 +155,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading54">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse54" aria-expanded="false" aria-controls="collapse54">
-								<h5>TBA
+								<h5>On \(k\)-contact Lie systems: theory and applications
 								<br>
-								TBA &#8213; 11/01/2025, 15:00</h5>
+								Tomasz Sobczak (University of Warsaw) &#8213; 11/01/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse54" class="accordion-collapse collapse" aria-labelledby="heading54" data-bs-parent="#accordion-fall24">
@@ -179,7 +179,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse53" aria-expanded="false" aria-controls="collapse53">
 								<h5>TBA
 								<br>
-								TBA &#8213; 12/12/2024, 15:00</h5>
+								TBA &#8213; 19/12/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse53" class="accordion-collapse collapse" aria-labelledby="heading53" data-bs-parent="#accordion-fall24">
@@ -251,7 +251,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse49" aria-expanded="false" aria-controls="collapse49">
 								<h5>TBA
 								<br>
-								TBA &#8213; 21/11/2024, 15:00</h5>
+								Maxence Mayrand (University of Sherbrooke) &#8213; 21/11/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse49" class="accordion-collapse collapse" aria-labelledby="heading49" data-bs-parent="#accordion-fall24">
@@ -306,9 +306,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading46">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse46" aria-expanded="false" aria-controls="collapse46">
-								<h5>TBA
+								<h5>New approaches to \(k\)-contact geometry
 								<br>
-								TBA &#8213; 31/10/2024, 15:00</h5>
+								Tomasz Sobczak (University of Warsaw) &#8213; 31/10/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse46" class="accordion-collapse collapse" aria-labelledby="heading46" data-bs-parent="#accordion-fall24">
