--- a/gamma/index.html
+++ b/gamma/index.html
@@ -288,7 +288,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse52" aria-expanded="false" aria-controls="collapse52">
 								<h5>TBA
 								<br>
-								TBA &#8213; 12/12/2024, 15:00</h5>
+								Tymon Frelik (University of Warsaw) &#8213; 12/12/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse52" class="accordion-collapse collapse" aria-labelledby="heading52" data-bs-parent="#accordion-winter24">
