--- a/gamma/index.html
+++ b/gamma/index.html
@@ -90,6 +90,19 @@
 				</ul>
 
 			</div>
+			<div class="container mb-2">
+				<div class="row align-items-center">
+					<div class="col-1">
+						<img src="img/fuw-logo.jpg" class="img-fluid" alt="...">
+					</div>
+					<div class="col-2">
+						<img src="img/uw-logo-pl.png" class="img-fluid" alt="...">
+					</div>
+					<div class="col-2">
+						<img src="img/logo-urv.png" class="img-fluid" alt="...">
+					</div>
+				</div>
+			</div>
 
 			<hr class="hr-teal mt-1 mb-4">
 
@@ -97,120 +110,9 @@
 
 				<h3 class="teal">&#9632; Conferences</h3>
 				
-				<h4 class="teal mb-3 mt-3">Summer 2025</h4>
-				<div class="accordion" id="accordion-summer25">
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading62">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse62" aria-expanded="false" aria-controls="collapse62">
-								<h5>TBA
-								<br>
-								TBA &#8213; 06/03/2025, 15:00</h5>
-							</button>
-						</h3>
-						<div id="collapse62" class="accordion-collapse collapse" aria-labelledby="heading62" data-bs-parent="#accordion-winter24">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p class="text-justify">
-  								TBA
-								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading61">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse61" aria-expanded="false" aria-controls="collapse61">
-								<h5>TBA
-								<br>
-								TBA &#8213; 27/02/2025, 15:00</h5>
-							</button>
-						</h3>
-						<div id="collapse61" class="accordion-collapse collapse" aria-labelledby="heading61" data-bs-parent="#accordion-winter24">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p class="text-justify">
-  								TBA
-								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
-							</div>
-						</div>
-					</div>
-				</div>
 				
 				<h4 class="teal mb-3 mt-3">Winter 2024</h4>
 				<div class="accordion" id="accordion-winter24">
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading60">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse60" aria-expanded="false" aria-controls="collapse60">
-								<h5>TBA
-								<br>
-								TBA &#8213; 20/02/2025, 15:00</h5>
-							</button>
-						</h3>
-						<div id="collapse60" class="accordion-collapse collapse" aria-labelledby="heading60" data-bs-parent="#accordion-winter24">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p class="text-justify">
-  								TBA
-								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading59">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse59" aria-expanded="false" aria-controls="collapse59">
-								<h5>TBA
-								<br>
-								TBA &#8213; 13/02/2025, 15:00</h5>
-							</button>
-						</h3>
-						<div id="collapse59" class="accordion-collapse collapse" aria-labelledby="heading59" data-bs-parent="#accordion-winter24">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p class="text-justify">
-  								TBA
-								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading58">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse58" aria-expanded="false" aria-controls="collapse58">
-								<h5>TBA
-								<br>
-								TBA &#8213; 06/02/2025, 15:00</h5>
-							</button>
-						</h3>
-						<div id="collapse58" class="accordion-collapse collapse" aria-labelledby="heading58" data-bs-parent="#accordion-winter24">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p class="text-justify">
-  								TBA
-								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading57">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse57" aria-expanded="false" aria-controls="collapse57">
-								<h5>TBA
-								<br>
-								TBA &#8213; 30/01/2025, 15:00</h5>
-							</button>
-						</h3>
-						<div id="collapse57" class="accordion-collapse collapse" aria-labelledby="heading57" data-bs-parent="#accordion-winter24">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p class="text-justify">
-  								TBA
-								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
-							</div>
-						</div>
-					</div>
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading56">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse56" aria-expanded="false" aria-controls="collapse56">
@@ -268,9 +170,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading53">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse53" aria-expanded="false" aria-controls="collapse53">
-								<h5>TBA
+								<h5>Reduction of twisted Poisson manifolds and applications to Hamilton-Jacobi equations
 								<br>
-								TBA &#8213; 19/12/2024, 15:00</h5>
+								Julia Lange (University of Warsaw) &#8213; 19/12/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse53" class="accordion-collapse collapse" aria-labelledby="heading53" data-bs-parent="#accordion-winter24">
