--- a/gamma/index.html
+++ b/gamma/index.html
@@ -389,7 +389,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading41">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse41" aria-expanded="false" aria-controls="collapse41">
-								<h5>TBA
+								<h5>Unimodularity and preservation of volume forms on Poisson-Lie groups and Poisson homogeneous spaces
 								<br>
 								Iván Gutiérrez-Sagredo (University of Burgos) &#8213; 26/09/2024, 15:00</h5>
 							</button>
@@ -398,7 +398,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								In this seminar I will introduce the notion of a Poisson-Lie group and a Poisson homogeneous space. Then I will discuss Poisson cohomology (and in particular unimodularity) and its relation with the existence of certain volume forms for Hamiltonian systems. Moreover, under some assumptions, I will show how an infinitesimal characterisation can be given. I will illustrate all these results with examples.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
