--- a/gamma/index.html
+++ b/gamma/index.html
@@ -400,7 +400,7 @@
 								<p class="text-justify">
   								In this seminar I will introduce the notion of a Poisson-Lie group and a Poisson homogeneous space. Then I will discuss Poisson cohomology (and in particular unimodularity) and its relation with the existence of certain volume forms for Hamiltonian systems. Moreover, under some assumptions, I will show how an infinitesimal characterisation can be given. I will illustrate all these results with examples.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/S-We2n2HXng' target="_blank">Iván Gutiérrez-Sagredo --- Unimodularity and preservation of volume forms on Poisson-Lie groups and Poisson homogeneous spaces</a>
 							</div>
 						</div>
 					</div>
