--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 					<li class='mb-2'>M. de León, J. Gaset, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "Practical Introduction to Action-Dependent Field Theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2409.08340" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2409.08340</span></a></li>
 
-					<li class='mb-2'>J. de Lucas, J. Lange and X. Rivas, "A symplectic approach to Schrödinger equations in the infinite-dimensional unbounded setting". <em>Preprint.</em> <a href="https://arxiv.org/abs/2312.09192" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2312.09192</span></a></li>
+					<li class='mb-2'>J. de Lucas, J. Lange and X. Rivas, "A symplectic approach to Schrödinger equations in the infinite-dimensional unbounded setting". <em>Preprint.</em> <a href="https://arxiv.org/abs/2312.09192" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2312.09192</span></a> <a href="https://doi.org/10.3934/math.20241359" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.3934/math.20241359</span></a></li>
 
 					<li class='mb-2'>L. Colombo, J. de Lucas, X. Rivas and B. M. Zawora, "An energy-momentum method for ordinary differential equations with an underlying <em>k</em>-polysymplectic manifold". <em>Preprint.</em> <a href="https://arxiv.org/abs/2311.15035" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2311.15035</span></a></li>
 
