--- a/gamma/index.html
+++ b/gamma/index.html
@@ -353,7 +353,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading43">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse43" aria-expanded="false" aria-controls="collapse43">
-								<h5>TBA
+								<h5>A glimpse at Routh reduction
 								<br>
 								Eduardo García-Toraño (Universidad Nacional del Sur) &#8213; 10/10/2024, 15:00</h5>
 							</button>
@@ -362,7 +362,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								In the 19th century, Edward Routh observed that when a Lagrangian possesses cyclic variables, a certain technique can be applied to reduce the number of variables by making use of the conserved momenta. The so-called Routh reduction has been geometrized in several papers starting in the 1970s, and in this talk we will take a quick look at some of the approaches suggested in the literature. This is meant to be informative, and we promise to keep things as simple as possible.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
