--- a/gamma/index.html
+++ b/gamma/index.html
@@ -85,7 +85,7 @@
 				<!-- <h3 class="teal">&#9632; Members</h3> -->
 				<h5>Organizing committee:</h5>
 				<ul class="ms-4">
-					<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a> (University of Warsaw)</li>
+					<li><a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a> (University of Warsaw)</li>
 					<li><a href="https://xrivas.com/" target="_blank">Xavier Rivas</a> (Universitat Rovira i Virgili)</li>
 				</ul>
 
