--- a/gamma/index.html
+++ b/gamma/index.html
@@ -382,7 +382,7 @@
 								<p class="text-justify">
   								There have been several attempts to extend the notions of symplectic and Poisson structures in order to create a suitable geometrical framework for classical field theories, trying to achieve a success similar to the use of these concepts in Hamiltonian mechanics. These notions always have a graded character, since the multisymplectic forms are of a higher degree than two. Another line of work has been to extend the concept of Dirac structures to these new scenarios. In this talk we review all these notions, relate them and propose a generalization that includes all of them. We expect this generalization to allow us to advance in the study of classical field theories, their integrability, reduction, numerical approximations and even their quantization.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/vFiNTMvEebQ' target="_blank">Manuel de León --- Graded Poisson Dirac and Graded Dirac structures</a>
 							</div>
 						</div>
 					</div>
