--- a/gamma/index.html
+++ b/gamma/index.html
@@ -111,6 +111,162 @@
 				<h3 class="teal">&#9632; Conferences</h3>
 				
 				
+				<h4 class="teal mb-3 mt-3">Summer 2025</h4>
+				<div class="accordion" id="accordion-summer25">
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading64">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse64" aria-expanded="false" aria-controls="collapse64">
+								<h5>TBA
+								<br>
+								TBA &#8213; 24/04/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse64" class="accordion-collapse collapse" aria-labelledby="heading64" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading63">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse63" aria-expanded="false" aria-controls="collapse63">
+								<h5>TBA
+								<br>
+								TBA &#8213; 10/04/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse63" class="accordion-collapse collapse" aria-labelledby="heading63" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading62">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse62" aria-expanded="false" aria-controls="collapse62">
+								<h5>TBA
+								<br>
+								TBA &#8213; 03/04/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse62" class="accordion-collapse collapse" aria-labelledby="heading62" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading61">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse61" aria-expanded="false" aria-controls="collapse61">
+								<h5>TBA
+								<br>
+								TBA &#8213; 27/03/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse61" class="accordion-collapse collapse" aria-labelledby="heading61" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading60">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse60" aria-expanded="false" aria-controls="collapse60">
+								<h5>TBA
+								<br>
+								TBA &#8213; 20/03/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse60" class="accordion-collapse collapse" aria-labelledby="heading60" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading59">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse59" aria-expanded="false" aria-controls="collapse59">
+								<h5>TBA
+								<br>
+								TBA &#8213; 13/03/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse59" class="accordion-collapse collapse" aria-labelledby="heading59" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading58">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse58" aria-expanded="false" aria-controls="collapse58">
+								<h5>TBA
+								<br>
+								TBA &#8213; 06/03/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse58" class="accordion-collapse collapse" aria-labelledby="heading58" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading57">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse57" aria-expanded="false" aria-controls="collapse57">
+								<h5>TBA
+								<br>
+								TBA &#8213; 27/02/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse57" class="accordion-collapse collapse" aria-labelledby="heading57" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<h4 class="teal mb-3 mt-3">Winter 2024</h4>
 				<div class="accordion" id="accordion-winter24">
 					<div class="accordion-item">
