--- a/gamma/index.html
+++ b/gamma/index.html
@@ -73,7 +73,7 @@
 						<li>Integrable systems, superposition rules, Lie systems</li>
 						<li>Stochasticity and numerical methods</li>
 					</ul>
-					<p class='lead'><strong>e-mail:</strong> gamma.seminar(at)gmail.com</p>
+					<p class="lead">If you would like to stay informed about upcoming seminars and receive regular updates, please send an email to <a href="mailto:gamma.seminar@gmail.com">gamma.seminar(at)gmail.com</a> with the subject line 'Subscribe to Seminar Mailing List,' and we will happily add you to our list of subscribers.</p>
 				</div>
 			</div>
 
