--- a/gamma/index.html
+++ b/gamma/index.html
@@ -252,7 +252,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse57" aria-expanded="false" aria-controls="collapse57">
 								<h5>TBA
 								<br>
-								TBA &#8213; 27/02/2025, 15:00</h5>
+								Francisco Caramello (Federal University of Santa Catarina) &#8213; 27/02/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse57" class="accordion-collapse collapse" aria-labelledby="heading57" data-bs-parent="#accordion-summer25">
