--- a/gamma/index.html
+++ b/gamma/index.html
@@ -520,7 +520,7 @@
 								<p class="text-justify">
   								In the 19th century, Edward Routh observed that when a Lagrangian possesses cyclic variables, a certain technique can be applied to reduce the number of variables by making use of the conserved momenta. The so-called Routh reduction has been geometrized in several papers starting in the 1970s, and in this talk we will take a quick look at some of the approaches suggested in the literature. This is meant to be informative, and we promise to keep things as simple as possible.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/EUoJ0djaXtk' target="_blank">Eduardo García-Toraño --- A glimpse at Routh reduction</a>
 							</div>
 						</div>
 					</div>
