--- a/gamma/index.html
+++ b/gamma/index.html
@@ -491,7 +491,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading44">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse44" aria-expanded="false" aria-controls="collapse44">
-								<h5>TBA
+								<h5>Reduction of cosymplectic groupoids by cosymplectic moment maps
 								<br>
 								Daniel Felipe López García (Instituto de Matemática e Estatística, Universidad de São Paulo) &#8213; 17/10/2024, 15:00</h5>
 							</button>
@@ -500,7 +500,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								There is a well-known fact in Poisson geometry: reduction commutes with integration (of the associated integrable Lie algebroid). This also holds for other kinds of geometries given by closed 2-forms. In this talk we discuss this kind of result in the particular case of cosymplectic groupoids. We can think of a cosymplectic groupoid as a manifold of objects and a manifold of arrows with smooth structural maps, such that the arrows have a cosymplectic structure compatible with these maps. The infinitesimal information associated with a cosymplectic groupoid is a Lie algebroid with infinitesimal multiplicative forms. If we have symmetries compatible with these structures, we can reduce the groupoid and then compute the algebroid, or we can compute the algebroid and then reduce it. What we prove is that these two procedures are equivalent.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
