--- a/gamma/index.html
+++ b/gamma/index.html
@@ -344,7 +344,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading52">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse52" aria-expanded="false" aria-controls="collapse52">
-								<h5>TBA
+								<h5>Introduction to Cartan geometry
 								<br>
 								Tymon Frelik (University of Warsaw) &#8213; 12/12/2024, 15:00</h5>
 							</button>
