--- a/gamma/index.html
+++ b/gamma/index.html
@@ -115,6 +115,120 @@
 				<div class="accordion" id="accordion-summer25">
 
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading70">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse70" aria-expanded="false" aria-controls="collapse70">
+								<h5>TBA
+								<br>
+								TBA &#8213; 12/06/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse70" class="accordion-collapse collapse" aria-labelledby="heading70" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading69">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse69" aria-expanded="false" aria-controls="collapse69">
+								<h5>TBA
+								<br>
+								TBA &#8213; 05/06/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse69" class="accordion-collapse collapse" aria-labelledby="heading69" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading68">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse68" aria-expanded="false" aria-controls="collapse68">
+								<h5>TBA
+								<br>
+								TBA &#8213; 29/05/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse68" class="accordion-collapse collapse" aria-labelledby="heading68" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading67">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse67" aria-expanded="false" aria-controls="collapse67">
+								<h5>TBA
+								<br>
+								TBA &#8213; 22/05/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse67" class="accordion-collapse collapse" aria-labelledby="heading67" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading66">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse66" aria-expanded="false" aria-controls="collapse66">
+								<h5>TBA
+								<br>
+								TBA &#8213; 15/05/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse66" class="accordion-collapse collapse" aria-labelledby="heading66" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading65">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse65" aria-expanded="false" aria-controls="collapse65">
+								<h5>TBA
+								<br>
+								TBA &#8213; 08/05/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse65" class="accordion-collapse collapse" aria-labelledby="heading65" data-bs-parent="#accordion-summer25">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading64">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse64" aria-expanded="false" aria-controls="collapse64">
 								<h5>TBA
