--- a/gamma/index.html
+++ b/gamma/index.html
@@ -569,7 +569,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading46">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse46" aria-expanded="false" aria-controls="collapse46">
-								<h5>New approaches to \(k\)-contact geometry
+								<h5>New approaches to \(k\)-contact geometry II
 								<br>
 								Tomasz Sobczak (University of Warsaw) &#8213; 31/10/2024, 15:00</h5>
 							</button>
@@ -578,7 +578,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								Building on our previous discussion, I will introduce various extensions and new research topics in \(k\)-contact geometry. I will examine certain compact \(k\)-contact manifolds and explore a potential extension of the Weinstein conjecture to this setting. Additionally, I will present a new form of Hamilton-De Donder Weyl equations for \(k\)-contact manifolds without polarization and describe a theory of characteristics for Lie symmetries of first-order differential equations. Our findings will be illustrated with examples such as the Dirac equation and the Hamilton-Jacobi equation.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
@@ -587,16 +587,16 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading45">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse45" aria-expanded="false" aria-controls="collapse45">
-								<h5>TBA
+								<h5>New approaches to \(k\)-contact geometry I
 								<br>
-								Jorge A. Jover Galtier (Universidad de Zaragoza) &#8213; 24/10/2024, 15:00</h5>
+								Javier de Lucas (University of Warsaw) &#8213; 24/10/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse45" class="accordion-collapse collapse" aria-labelledby="heading45" data-bs-parent="#accordion-winter24">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								In the first part of this two-part series of talks, we will introduce \(k\)-contact geometry, an extension of contact geometry for studying field theories. I will begin by reviewing the classical method that employs \(k\)-contact structures, specifically through a reformulation called the \(k\)-contact form. We will also discuss a technical adjustment made to address a minor issue in the existing literature. Next, I will explore our new approach utilising distributions, termed \(k\)-contact distributions, demonstrating that the \(k\)-contact form is a convenient method for studying these distributions rather than a fundamental component of \(k\)-contact geometry. This approach paves the way for numerous research opportunities, which will be briefly mentioned and further developed in the second part of the talk.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
@@ -616,7 +616,7 @@
 								<p class="text-justify">
   								There is a well-known fact in Poisson geometry: reduction commutes with integration (of the associated integrable Lie algebroid). This also holds for other kinds of geometries given by closed 2-forms. In this talk we discuss this kind of result in the particular case of cosymplectic groupoids. We can think of a cosymplectic groupoid as a manifold of objects and a manifold of arrows with smooth structural maps, such that the arrows have a cosymplectic structure compatible with these maps. The infinitesimal information associated with a cosymplectic groupoid is a Lie algebroid with infinitesimal multiplicative forms. If we have symmetries compatible with these structures, we can reduce the groupoid and then compute the algebroid, or we can compute the algebroid and then reduce it. What we prove is that these two procedures are equivalent.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/0ZTzekKaLLo' target="_blank">Daniel Felipe López García --- Reduction of cosymplectic groupoids by cosymplectic moment maps</a>
 							</div>
 						</div>
 					</div>
@@ -710,7 +710,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								In this talk I will present some recent work with Manuel de León on Multisymplectic Geometry. More particularly, we will study a generalization to Multisymplectic manifolds of some basic results in Symplectic Geometry: An interpretation of (locally) Hamiltonian multivector fields as k-Lagrangian submanifolds and coisotropic reduction when the multisymplectic manifold is a bundle of forms.
+  								In this talk I will present some recent work with Manuel de León on Multisymplectic Geometry. More particularly, we will study a generalization to Multisymplectic manifolds of some basic results in Symplectic Geometry: An interpretation of (locally) Hamiltonian multivector fields as \(k\)-Lagrangian submanifolds and coisotropic reduction when the multisymplectic manifold is a bundle of forms.
 								</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/2sWAcn1k3V0' target="_blank">Rubén Izquierdo --- Coisotropic reduction in Multisymplectic Geometry</a>
 							</div>
@@ -1064,7 +1064,7 @@
 									<li>J. de Lucas, M. Tobolski and S. Vilariño. A new application of <em>k</em>-symplectic Lie systems, <em>Int. J. Geom. Methods Mod. Phys.</em> (2015) 1550071.</li>
 								</ol>
 								</p>
-								<strong>Link to the video: </strong><a href='https://youtu.be/92iD1ftD3ws' target="_blank">Javier de Lucas --- k-symplectic Lie systems: theory and applications</a>
+								<strong>Link to the video: </strong><a href='https://youtu.be/92iD1ftD3ws' target="_blank">Javier de Lucas --- \(k\)-symplectic Lie systems: theory and applications</a>
 							</div>
 						</div>
 					</div>
