--- a/gamma/index.html
+++ b/gamma/index.html
@@ -347,7 +347,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse58" aria-expanded="false" aria-controls="collapse58">
 								<h5>TBA
 								<br>
-								TBA &#8213; 06/03/2025, 15:00</h5>
+								Jorge A. Jover Galtier (University of Zaragoza) &#8213; 06/03/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse58" class="accordion-collapse collapse" aria-labelledby="heading58" data-bs-parent="#accordion-summer25">
