--- a/gamma/index.html
+++ b/gamma/index.html
@@ -87,6 +87,7 @@
 				<ul class="ms-4">
 					<li><a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a> (University of Warsaw)</li>
 					<li><a href="https://xrivas.com/" target="_blank">Xavier Rivas</a> (Universitat Rovira i Virgili)</li>
+					<li>Daniel Torres (Universitat Politècnica de Catalunya, PhD student)</li>
 				</ul>
 
 			</div>
@@ -598,7 +599,7 @@
 								<p class="text-justify">
   								In the first part of this two-part series of talks, we will introduce \(k\)-contact geometry, an extension of contact geometry for studying field theories. I will begin by reviewing the classical method that employs \(k\)-contact structures, specifically through a reformulation called the \(k\)-contact form. We will also discuss a technical adjustment made to address a minor issue in the existing literature. Next, I will explore our new approach utilising distributions, termed \(k\)-contact distributions, demonstrating that the \(k\)-contact form is a convenient method for studying these distributions rather than a fundamental component of \(k\)-contact geometry. This approach paves the way for numerous research opportunities, which will be briefly mentioned and further developed in the second part of the talk.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/U0EzQiDzHug' target="_blank">Javier de Lucas --- New approaches to \(k\)-contact geometry I</a>
 							</div>
 						</div>
 					</div>
