--- a/gamma/index.html
+++ b/gamma/index.html
@@ -102,6 +102,9 @@
 					<div class="col-2">
 						<img src="img/logo-urv.png" class="img-fluid" alt="...">
 					</div>
+					<div class="col-2">
+						<img src="img/logo-upc.png" class="img-fluid" alt="...">
+					</div>
 				</div>
 			</div>
 
@@ -1419,13 +1422,14 @@
 					<div class="col-2">
 						<img src="img/fuw-logo.jpg" class="img-fluid" alt="...">
 					</div>
-					<div class="col-1"></div>
 					<div class="col-3">
 						<img src="img/uw-logo-pl.png" class="img-fluid" alt="...">
 					</div>
-					<div class="col-1"></div>
-					<div class="col-4">
+					<div class="col-3">
 						<img src="img/logo-urv.png" class="img-fluid" alt="...">
+					</div>
+					<div class="col-3">
+						<img src="img/logo-upc.png" class="img-fluid" alt="...">
 					</div>
 				</div>
 			</div>
