--- a/gamma/index.html
+++ b/gamma/index.html
@@ -1420,6 +1420,7 @@
 			<div class="container mt-5">
 				<div class="row align-items-center">
 					<div class="col-2">
+					<div class="col-1"></div>
 						<img src="img/fuw-logo.jpg" class="img-fluid" alt="...">
 					</div>
 					<div class="col-3">
