--- a/gamma/index.html
+++ b/gamma/index.html
@@ -534,7 +534,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading48">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse48" aria-expanded="false" aria-controls="collapse48">
-								<h5>TBA
+								<h5>Reduction along strong Dirac maps
 								<br>
 								Ana Bălibanu (Louisiana State University) &#8213; 14/11/2024, 15:00</h5>
 							</button>
@@ -543,7 +543,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								We develop a general procedure for reduction along strong Dirac maps, which are a broad generalization of Poisson moment maps. The reduction level in this setting is a submanifold of the target, and the symmetries are given by the action of a groupoid. When applied to quasi-Poisson moment maps, this framework produces new multiplicative versions of many Poisson varieties that are important to geometric representation theory. This is joint work with Maxence Mayrand.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
