--- a/gamma/index.html
+++ b/gamma/index.html
@@ -123,7 +123,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse70" aria-expanded="false" aria-controls="collapse70">
 								<h5>TBA
 								<br>
-								TBA &#8213; 12/06/2025, 15:00</h5>
+								Tymon Frelik (University of Warsaw)<br>Michalina Borczynska (University of Warsaw) &#8213; 12/06/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse70" class="accordion-collapse collapse" aria-labelledby="heading70" data-bs-parent="#accordion-summer25">
@@ -582,9 +582,9 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								Building on our previous discussion, I will introduce various extensions and new research topics in \(k\)-contact geometry. I will examine certain compact \(k\)-contact manifolds and explore a potential extension of the Weinstein conjecture to this setting. Additionally, I will present a new form of Hamilton-De Donder Weyl equations for \(k\)-contact manifolds without polarization and describe a theory of characteristics for Lie symmetries of first-order differential equations. Our findings will be illustrated with examples such as the Dirac equation and the Hamilton-Jacobi equation.
+  								Building on our previous discussion, I will introduce various extensions and new research topics in \(k\)-contact geometry. I will examine certain compact \(k\)-contact manifolds and explore a potential extension of the Weinstein conjecture to this setting. Additionally, I will present a new form of Hamilton-De Donder-Weyl equations for \(k\)-contact manifolds without polarization and describe a theory of characteristics for Lie symmetries of first-order differential equations. Our findings will be illustrated with examples such as the Dirac equation and the Hamilton-Jacobi equation.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/7WlF9cQYq_c' target="_blank">Tomasz Sobczak --- New approaches to k-contact geometry II</a>
 							</div>
 						</div>
 					</div>
