--- a/gamma/index.html
+++ b/gamma/index.html
@@ -180,7 +180,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse67" aria-expanded="false" aria-controls="collapse67">
 								<h5>TBA
 								<br>
-								TBA &#8213; 22/05/2025, 15:00</h5>
+								Piergiulio Tempesta (Universidad Complutense de Madrid) &#8213; 22/05/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse67" class="accordion-collapse collapse" aria-labelledby="heading67" data-bs-parent="#accordion-summer25">
