--- a/gamma/index.html
+++ b/gamma/index.html
@@ -566,7 +566,7 @@
   								
 								Based on joint work with Casey Blacker and Antonio Miti.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/bPxf3nADCKo' target="_blank">Leonid Ryvkin --- Reduction of (multi)-symplectic observables</a>
 							</div>
 						</div>
 					</div>
