--- a/gamma/index.html
+++ b/gamma/index.html
@@ -311,9 +311,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading60">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse60" aria-expanded="false" aria-controls="collapse60">
-								<h5>TBA
+								<h5>Introduction to Courant algebroids
 								<br>
-								TBA &#8213; 20/03/2025, 15:00</h5>
+								Julia Lange (University of Warsaw) &#8213; 20/03/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse60" class="accordion-collapse collapse" aria-labelledby="heading60" data-bs-parent="#accordion-summer25">
@@ -330,9 +330,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading59">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse59" aria-expanded="false" aria-controls="collapse59">
-								<h5>TBA
+								<h5>A gentle introduction to Dirac structures
 								<br>
-								TBA &#8213; 13/03/2025, 15:00</h5>
+								Javier de Lucas (University of Warsaw) &#8213; 13/03/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse59" class="accordion-collapse collapse" aria-labelledby="heading59" data-bs-parent="#accordion-summer25">
