--- a/gamma/index.html
+++ b/gamma/index.html
@@ -545,7 +545,7 @@
 								<p class="text-justify">
   								We develop a general procedure for reduction along strong Dirac maps, which are a broad generalization of Poisson moment maps. The reduction level in this setting is a submanifold of the target, and the symmetries are given by the action of a groupoid. When applied to quasi-Poisson moment maps, this framework produces new multiplicative versions of many Poisson varieties that are important to geometric representation theory. This is joint work with Maxence Mayrand.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/HnHvrDsrTZA' target="_blank">Ana Bălibanu --- Reduction along strong Dirac maps</a>
 							</div>
 						</div>
 					</div>
