--- a/gamma/index.html
+++ b/gamma/index.html
@@ -516,7 +516,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading49">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse49" aria-expanded="false" aria-controls="collapse49">
-								<h5>TBA
+								<h5>Scheme-theoretic coisotropic reduction
 								<br>
 								Maxence Mayrand (University of Sherbrooke) &#8213; 21/11/2024, 15:00</h5>
 							</button>
@@ -525,7 +525,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								In joint work with Peter Crooks (<a href="https://arxiv.org/abs/2107.03198">arXiv:2107.03198</a>), we introduced a notion of symplectic reduction where the level can be a submanifold of the dual of the Lie algebra (or more generally, a Poisson manifold), and the quotient is by a “stabilizer subgroupoid.” This explains many constructions in symplectic geometry at once, such as Marsden–Weinstein–Meyer reduction, symplectic cutting, symplectic implosion, pre-images of Poisson transversals, and the Ginzburg–Kazhdan construction of Moore–Tachikawa TQFT. In this talk, I will recall this construction and introduce a scheme-theoretic version recently introduced in joint work with Peter Crooks (<a href="https://arxiv.org/abs/2408.11932">arXiv:2408.11932</a>). The latter plays a key role in our recent work on the Moore-Tachikawa conjecture (<a href="https://arxiv.org/abs/2409.03532">arXiv:2409.03532</a>).
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
