--- a/gamma/index.html
+++ b/gamma/index.html
@@ -88,6 +88,7 @@
 					<li><a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a> (University of Warsaw)</li>
 					<li><a href="https://xrivas.com/" target="_blank">Xavier Rivas</a> (Universitat Rovira i Virgili)</li>
 					<li>Daniel Torres (Universitat Politècnica de Catalunya, PhD student)</li>
+					<li>Julia Lange (University of Warsaw, PhD student)</li>
 				</ul>
 
 			</div>
