--- a/gamma/index.html
+++ b/gamma/index.html
@@ -508,7 +508,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								In my talk, I will present a Marsden-Weinstein reduction theorem for \(k\)-contact manifolds. First, I will introduce the notion of \(k\)-symplectic manifold \((P,\boldsymbol{\omega})\), where \(\boldsymbol{\omega}\in\Omega^2(P,\mathbb{R}^k)\) is closed and satisfies \(\ker \boldsymbol\omega=0\). Then, I will briefly review the \(k\)-symplectic Marsden-Weinstein reduction theorem and introduce the definition of a \(k\)-contact manifold, namely a pair \((M,\boldsymbol{\eta})\), where \(\boldsymbol{\eta}\in \Omega^1(M,\mathbb{R}^k)\) satisfies certain properties. Next, I will sketch the proof of the Marsden-Weinstein reduction theorem for a \(k\)-contact manifold \((M,\boldsymbol{\eta})\) by considering a \(k\)-symplectic manifold of the form \((\mathbb{R}^\times \times M,\boldsymbol{\omega}:=\mathrm{d}(s\boldsymbol{\eta}))\). Finally, an illustrative example of a \(k\)-contact Marsden-Weinstein reduction will be presented. If time permits, I will review various approaches to the contact Marsden-Weinstein reduction theorem, namely when \(k=1\).
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
