--- a/gamma/index.html
+++ b/gamma/index.html
@@ -68,12 +68,12 @@
 					<h5>Topics:</h5>
 					<ul class='ms-4 lead'>
 						<li>Geometric mechanics and field theories</li>
-						<li>Geometric structures: symplectic and Poisson geometry, contact geometry and its Generalisations</li>
+						<li>Geometric structures: symplectic and Poisson geometry, contact geometry and its generalisations</li>
 						<li>Supergeometry</li>
 						<li>Integrable systems, superposition rules, Lie systems</li>
 						<li>Stochasticity and numerical methods</li>
 					</ul>
-					<p class="lead">If you would like to stay informed about upcoming seminars and receive regular updates, please send an email to <a href="mailto:gamma.seminar@gmail.com">gamma.seminar(at)gmail.com</a> with the subject line 'Subscribe to Seminar Mailing List,' and we will happily add you to our list of subscribers.</p>
+					<p class="lead">If you would like to stay informed about upcoming seminars and receive regular updates, please send an email to <a href="mailto:gamma-seminar@fuw.edu.pl">gamma-seminar(at)fuw.edu.pl</a> with the subject line 'Subscribe to Seminar Mailing List,' and we will happily add you to our list of subscribers.</p>
 				</div>
 			</div>
 
@@ -1439,7 +1439,7 @@
 		</div>
 
 		<footer class="container-fluid footer footer-gamma mt-5 pb-1">
-			<p class="lead pt-3 text-center text-white"><small>Geometry and Applications. Modern Mathematical Approaches<br>gamma.seminar(at)gmail.com</small></p>
+			<p class="lead pt-3 text-center text-white"><small>Geometry and Applications. Modern Mathematical Approaches<br>gamma-seminar(at)fuw.edu.pl</small></p>
 		</footer>
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
